--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /[Bb]uild/
 /[Bb]uilds/
 /Assets/AssetStoreTools*
-/unityProject/[Tt]est/
+/unityProject/[Tt]estTwo/
 
 # Visual Studio 2015 cache directory
 /.vs/
