--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /unityProject/[Bb]uild/
 /unityProject/[Bb]uilds/
 /unityProject/Assets/AssetStoreTools*
+/unityProject/ProjectSettings/
 
 # Visual Studio 2015 cache directory
 /.vs/
